# CPP_Hunt_CustomFileInterpreter

./: .gitignore  CMakeLists.txt  Context.h  README.md  darwin-19.supp  main.cpp
src/: Context.cpp  Context.h  Program.cpp  Program.h  curlwrapper.cpp  program.cpp  program.h
src/exceptions/: ExpressionNotFoundException.h  FileNotFoundException.h  NotImplementedException.h
src/expressions/: AbstractExpression.h  Expressions.h  IExpression.h
src/expressions/functions/: FunctionExpression.cpp  FunctionExpression.h  ReturnExpression.cpp  ReturnExpression.h
src/expressions/integer/: AbsoluteExpression.cpp  AbsoluteExpression.h  AddExpression.cpp  AddExpression.h  DecrementExpression.cpp  DecrementExpression.h  DivideExpression.cpp  DivideExpression.h  IncrementExpression.cpp  IncrementExpression.h  ModuloExpression.cpp  ModuloExpression.h  MultiplyExpression.cpp  MultiplyExpression.h  NegateExpression.cpp  NegateExpression.h  SubtractExpression.cpp  SubtractExpression.h
src/expressions/jumps/: GotoExpression.cpp  GotoExpression.h
src/expressions/string/: ConcatenationExpression.cpp  ConcatenationExpression.h  DuplicateExpression.cpp  DuplicateExpression.h  IndexingExpression.cpp  IndexingExpression.h  LengthExpression.cpp  LengthExpression.h  NewLineExpression.cpp  NewLineExpression.h  ROT13Expression.cpp  ROT13Expression.h  ReverseExpression.cpp  ReverseExpression.h  SubstringExpression.cpp  SubstringExpression.h
src/expressions/terminal/: TextExpression.cpp  TextExpression.h
src/expressions/types/: LabelDefinitionExpression.cpp  LabelDefinitionExpression.h  LabelReferenceExpression.cpp  LabelReferenceExpression.h  VariableAssignmentExpression.cpp  VariableAssignmentExpression.h  VariableReferenceExpression.cpp  (+1 more)
src/utils/: Logger.cpp  Logger.h
src/wrappers/: CUrlWrapper.cpp  CUrlWrapper.h  curlwrapper.cpp  curlwrapper.h
(+18 files in other folders)
